# storage/api-docs/api-docs.json
@@ -6,7 +6,7 @@
         "contact": {
             "email": "admin@example.com"
         },
-        "version": "1.0.0"
+        "version": "2.0.0"
     },
     "servers": [
         {
@@ -59,7 +59,7 @@
         "/user-login": {
             "post": {
                 "tags": [
-                    "Auth"
+                    "User"
                 ],
                 "summary": "Login user",
                 "description": "Authenticate user and return a token",
